@@ -1,4 +1,4 @@
-import cache_errors
+import cache_errors, copy
 
 class database(object):
 	# this is for metadata/cache transfer.
@@ -6,18 +6,32 @@ class database(object):
 	# leave this.
 
 	complete_eclass_entries_ = True
+	autocommits = False
 
 	def __init__(self, label, auxdbkeys, readonly=False, **config):
 		""" initialize the derived class; specifically, store label/keys"""
 		self._known_keys = auxdbkeys
 		self.label = label
 		self.readonly = readonly
+		self.sync_rate = 0
+		self.updates = 0
 
 	
 	def __getitem__(self, cpv):
+		"""set a cpv to values
+		This shouldn't be overriden in derived classes since it handles the __eclasses__ conversion.
+		that said, if the class handles it, they can override it."""
+		if self.updates > self.sync_rate:
+			self.commit()
+			self.updates = 0
+		d=self._getitem(cpv)
+		if "_eclasses_" in d:
+			d["_eclasses_"] = reconstruct_eclasses(d["_eclasses_"])
+		return d
+
+	def _getitem(self, cpv):
 		"""get cpv's values.
-		override this in derived classess
-		note _eclassees_ key *must* be handled"""
+		override this in derived classess"""
 		raise NotImplementedError
 
 
@@ -26,8 +40,16 @@ class database(object):
 		This shouldn't be overriden in derived classes since it handles the readonly checks"""
 		if self.readonly:
 			raise cache_errors.ReadOnlyRestriction()
-		self._setitem(cpv, values)
-			
+		d=copy.copy(values)
+		if "_eclasses_" in d:
+			d["_eclasses_"] = serialize_eclasses(d["_eclasses_"])
+		self._setitem(cpv, d)
+		if not self.autocommits:
+			self.updates += 1
+			if self.updates > self.sync_rate:
+				self.commit()
+				self.updates = 0
+
 
 	def _setitem(self, name, values):
 		"""__setitem__ calls this after readonly checks.  override it in derived classes
@@ -40,7 +62,12 @@ class database(object):
 		This shouldn't be overriden in derived classes since it handles the readonly checks"""
 		if self.readonly:
 			raise cache_errors.ReadOnlyRestriction()
+		if not self.autocommits:
+			self.updates += 1
 		self._delitem(cpv)
+		if self.updates > self.sync_rate:
+			self.commit()
+			self.updates = 0
 
 
 	def _delitem(self,cpv):
@@ -56,6 +83,14 @@ class database(object):
 		return tuple(self.iterkeys())
 
 	def iterkeys(self):
+		raise NotImplementedError
+
+	def sync(self, rate=0):
+		self.sync_rate = rate
+		if(rate == 0):
+			self.commit()
+
+	def commit(self):
 		raise NotImplementedError
 
 	def get_matches(self, match_dict):
@@ -91,3 +126,21 @@ class database(object):
 #				yield cpv,vals
 				yield cpv
 
+
+def serialize_eclasses(eclass_dict):
+	"""takes a dict, returns a string representing said dict"""
+	return "\t".join(["%s\t%s\t%s" % (k, v[0], str(v[1])) for k,v in eclass_dict.items()])
+
+def reconstruct_eclasses(eclass_string):
+	"""returns a dict when handed a string generated by serialize_eclasses"""
+	eclasses = eclass_string.rstrip().lstrip().split("\t")
+	if eclasses == [""]:
+		# occasionally this occurs in the fs backends.  they suck.
+		return {}
+	if len(eclasses) % 3 != 0:
+		raise cache_errors.CacheCorruption(cpv, "_eclasses_ was of invalid len %i" % len(eclasses))
+	d={}
+	for x in range(0, len(eclasses), 3):
+		d[eclasses[x]] = (eclasses[x + 1], long(eclasses[x + 2]))
+	del eclasses
+	return d
